--- a/Part 32 - Authentication and Security/.env
+++ b/Part 32 - Authentication and Security/.env
@@ -1,1 +1,3 @@
 SECRET=uaioe87r6vnj48yrmc7x4ynr
+CLIENT_ID=560768197808-mur1p64ibglu85dndtbrf7qhdioa82i6.apps.googleusercontent.com
+CLIENT_SECRET=7OOLrGhqBgWoO1XBVBXhGO8q
